# hallbayes

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  slsa-provenance.yml
commands/: berry-configure.md  berry-setup.md
docs/: CLI.md  CONFIGURATION.md  PACKAGING.md  USAGE.md
scripts/: pyinstaller_entry.py
skills/: berry-generate-boilerplate.md  berry-greenfield-prototyping.md  berry-inline-completion-guard.md  berry-plan-and-execute.md  berry-rca-fix-agent.md  berry-search-and-learn.md
src/berry/: __init__.py  __main__.py  auth_flow.py  cli.py  clients.py  config.py  enforcement.py  integration.py  mcp_server.py  permissions.py
src/berry/hallucination_detector/: __init__.py  core.py  k8s_wrapper.py  stage_ab.py
src/berry/hallucination_detector/backends/: base.py  gemini_backend.py  openai_backend.py  vertex_backend.py
tests/: conftest.py
tests/e2e/: test_k8s_wrapper_e2e.py  test_mcp_server.py
tests/unit/: test_gemini_backend.py  test_k8s_wrapper.py  test_mcp_k8s_tools.py  test_permissions.py  test_vertex_backend.py
