[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "berry"
version = "1.0.1"
description = "Berry: a local MCP runtime + opinionated toolpack for coding agents (works across MCP-enabled CLIs)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Hassana Labs" }]
keywords = ["mcp", "cli", "agents", "verification"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
# Prefer SPDX string over a TOML table (setuptools deprecates the table form).
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "mcp[cli]>=1.0.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8.0",
]

[project.scripts]
berry = "berry.cli:main"
berry-mcp = "berry.mcp_server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = []

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
